--- a/assets/css/entries.css
+++ b/assets/css/entries.css
@@ -55,11 +55,6 @@
   font-weight: 500;
 }
 
-.semi-bold {
-  font-weight: 400;
-  font-size: 1.4375rem;
-}
-
 /* =====================
   ALERT
   ===================== */
